# PytnonWeb_mod_1

./: Dockerfile  README.md  UserInterface.py  logs.txt
app_poetry_0403/: pyproject.toml
